--- a/part10.html
+++ b/part10.html
@@ -32,9 +32,9 @@ var config = {
     }
 };
 
-var player;
-var starslet 
+var player1;
 var player2;
+var starslet 
 var bombs;
 var platforms;
 var cursors;
@@ -44,12 +44,12 @@ var scoreText = "";
 ///
 //Paramètres physiques
 //Velocity des joueurs
-var veloX = 160;
-var veloY = -330; 
+var veloX = 200;
+var veloY = -350; 
 var malusX = 1;
 var malusY = 1;
 //setup la force des punch
-var punchForce = 29000;
+var punchForce = 30000;
 //setup la forces des bombes
 var bombForce = 100000;
 
@@ -84,13 +84,15 @@ function create ()
     platforms.create(750, 220, 'ground');
 
     // The player and its settings
-    player = this.physics.add.sprite(100, 600, 'dude');
+    player1 = this.physics.add.sprite(100, 600, 'dude');
+    player1.isDead = "false"
+    player1.name = "player1"
 
-    //  Player physics properties. Give the little guy a slight bounce.
-    player.setBounce(0.1);
-    player.setCollideWorldBounds(false);
+    //  Player1 physics properties. Give the little guy a slight bounce.
+    player1.setBounce(0.1);
+    player1.setCollideWorldBounds(false);
 
-    //  Our player animations, turning, walking left and walking right.
+    //  Our player1 animations, turning, walking left and walking right.
     this.anims.create({
         key: 'left',
         frames: this.anims.generateFrameNumbers('dude', { start: 0, end: 3 }),
@@ -113,6 +115,8 @@ function create ()
 
     //Created player 2
     player2 = this.physics.add.sprite(200, 600, 'dude');
+    player2.isDead = "false"
+    player2.name = "player2"
 
     // Player2 physics properties. Give the little guy a slight bounce.
     player2.setBounce(0.1)
@@ -167,48 +171,56 @@ function create ()
     scoreText = this.add.text(16, 16, 'score: 0', { fontSize: '32px', fill: '#000' });
 
     //  Collide the player and the stars with the platforms
-    this.physics.add.collider(player, platforms);
+    this.physics.add.collider(player1, platforms);
     this.physics.add.collider(player2, platforms);
     this.physics.add.collider(stars, platforms);
     this.physics.add.collider(bombs, platforms);
     //collision entre joueur
-    this.physics.add.collider(player, player2, punch);
+    this.physics.add.collider(player1, player2, punch);
 
     //Checks to see if the player overlaps with any of the stars, if he does call the collectStar function
-    this.physics.add.overlap(player, stars, collectStar, null, this);
+    this.physics.add.overlap(player1, stars, collectStar, null, this);
     this.physics.add.overlap(player2, stars, collectStar, null, this);
 
-    this.physics.add.collider(player, bombs, hitBomb, null, this);
+    this.physics.add.collider(player1, bombs, hitBomb, null, this);
     this.physics.add.collider(player2, bombs, hitBomb, null, this);
-    
-    console.log(player)
+
+
 }
 
 function update ()
-{
-    if (gameOver)
-    {
-        return;
+{   
+    //vérifie pour chaque joueur s'il est vivant ou non
+    function isDead (player) {
+        if (player.y > 720){
+            player.isDead = "true"
+            console.log("Is Dead"+player.y)
+            player.disableBody(true, true)
+        } else {
+            return false
+        }
     }
+    //if (!isDead(player1)) {}
+    //if (!isDead(player2)) {}
     //player 1 controll
     if (cursors.left.isDown)
     {
-        player.setVelocityX(-veloX/malusX);
-        player.anims.play('left', true);
+        player1.setVelocityX(-veloX/malusX);
+        player1.anims.play('left', true);
     }
     else if (cursors.right.isDown)
     {
-        player.setVelocityX(veloX/malusX);
-        player.anims.play('right', true);
+        player1.setVelocityX(veloX/malusX);
+        player1.anims.play('right', true);
     }
     else
     {
-        player.setVelocityX(0);
-        player.anims.play('turn');
+        player1.setVelocityX(0);
+        player1.anims.play('turn');
     }
-    if (cursors.up.isDown && player.body.touching.down)
+    if (cursors.up.isDown && player1.body.touching.down)
     {
-        player.setVelocityY(veloY/malusY);
+        player1.setVelocityY(veloY/malusY);
     }
     ///
     //player 2 controll
@@ -241,24 +253,28 @@ function update ()
     }*/
 }
 
-function punch (player, player2){
-    //première condition uniquement pour le player 2 //gestion du poing droit
-    if(e.isDown && d.isDown){
-        //accélération initial sur l'axe des x
-        player.setAccelerationX(punchForce)
-        //Créer un variation au cours du temps de l'acceleration
-        setTimeout(() => {player.setAccelerationX(punchForce/2)}, 250)
-        setTimeout(() => {player.setAccelerationX(punchForce/3)}, 450)
-        setTimeout(() => {player.setAccelerationX(0)}, 500)
+function punch (player1, player2){
+    //function punching 
+    function punching (victime, sens){
+        if (sens == 1){}
+        else if (sens == 2){ puncheForce = (-punchForce);}
+        victime.setAccelerationX(punchForce)
+            //Créer un variation au cours du temps de l'acceleration
+            setTimeout(() => {victime.setAccelerationX(punchForce/2)}, 250)
+            setTimeout(() => {victime.setAccelerationX(punchForce/3)}, 450)
+            setTimeout(() => {victime.setAccelerationX(0)}, 500)
     }
-    //deuxième condition uniquement pour le player 2 //gestion du poing gauche
+    if(e.isDown && d.isDown){
+        punching(player1, 1)
+    }
     else if(e.isDown && q.isDown){
-        //accélération initial sur l'axe des x
-        player.setAccelerationX(-punchForce)
-        //Créer un variation au cours du temps de l'acceleration
-        setTimeout(() => {player.setAccelerationX(-punchForce/2)}, 250)
-        setTimeout(() => {player.setAccelerationX(-punchForce/3)}, 450)
-        setTimeout(() => {player.setAccelerationX(0)}, 500)
+        punching(player1, 2)
+    }
+    if(cursors.right.isDown && e.isDown){
+        punching(player2, 1)
+    }
+    else if(cursors.left.isDown && e.isDown){
+        punching(player2, 2)
     }
 }
 
