--- a/part10.html
+++ b/part10.html
@@ -324,7 +324,7 @@ function explode (player, bomb){
             }, 500)
     }
     explose(player)
-    bomb.disableBody(true,true)
+    bomb.destroy()
 }
 
 </script>
