--- a/part10.html
+++ b/part10.html
@@ -52,7 +52,7 @@ var malusY = 1;
 var punchForce = 30000;
 //setup la forces des bombes
 var bombForceX = 2000;
-var bombForceY = 300;
+var bombForceY = 500;
 
 
 var game = new Phaser.Game(config);
@@ -259,7 +259,7 @@ function punch (player1, player2){
     //function punching 
     function punching (victime, sens){
         if (sens == 1){}
-        else if (sens == 2){ puncheForce = (-punchForce);}
+        else if (sens == 2){ punchForce = (-punchForce);}
         victime.setAccelerationX(punchForce)
             //Créer un variation au cours du temps de l'acceleration
             setTimeout(() => {victime.setAccelerationX(punchForce/2)}, 250)
@@ -306,21 +306,21 @@ function collectStar (player, star)
 function explode (player, bomb){
     function explose ( victime ){
         let xForce = bombForceX*((player.x - bomb.x))
-        let yForce = bombForceY*((player.y - bomb.y)/10)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    
+        let yForce = bombForceY*((player.y - bomb.y))                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    
         victime.setAccelerationX(xForce)
         victime.setAccelerationY(yForce)
             //Créer un variation au cours du temps de l'acceleration
             setTimeout(() => {
+                victime.setAccelerationY(0)
+            }, 40)
+            setTimeout(() => {
                 victime.setAccelerationX(xForce/2)
-                victime.setAccelerationY(yForce/2)
             }, 250)
             setTimeout(() => {
                 victime.setAccelerationX(xForce/3)
-                victime.setAccelerationY(yForce/3)
             ;}, 450)
             setTimeout(() => {
                 victime.setAccelerationX(0)
-                victime.setAccelerationY(0)
             }, 500)
     }
     explose(player)
