--- a/part10.html
+++ b/part10.html
@@ -16,8 +16,8 @@
 
 var config = {
     type: Phaser.AUTO,
-    width: 1280,
-    height: 720,
+    width: 2560,
+    height: 1440,
     physics: {
         default: 'arcade',
         arcade: {
@@ -45,22 +45,22 @@ var scoreText = "";
 //Paramètres physiques
 //Velocity des joueurs
 var veloX = 200;
-var veloY = -350; 
+var veloY = -700; 
 var malusX = 1;
 var malusY = 1;
 //setup la force des punch
 var punchForce = 30000;
 //setup la forces des bombes
-var bombForceX = 2000;
-var bombForceY = 500;
+var bombForceX = 2000*2;
+var bombForceY = 500*2;
 
 
 var game = new Phaser.Game(config);
 
 function preload ()
 {
-    this.load.image('sky', 'assets/sky.png');
-    this.load.image('ground', 'assets/platform.png');
+    this.load.image('sky', 'assets/PNG/bg_volcano_2000_1500.png');
+    this.load.image('ground', 'assets/PNG/volcano_pack_alt_05.png');
     this.load.image('star', 'assets/star.png');
     this.load.image('bomb', 'assets/bomb.png');
     this.load.spritesheet('dude', 'assets/dude.png', { frameWidth: 32, frameHeight: 48 });
@@ -69,7 +69,9 @@ function preload ()
 function create ()
 {
     //  A simple background for our game
-    this.add.image(640, 360, 'sky');
+    this.add.image(1280, 720, 'sky');
+    this.add.image(-1280, 720, 'sky');
+    //bgGround = this.add.sprite(100, 750, 'sky');
 
     //  The platforms group contains the ground and the 2 ledges we can jump on
     platforms = this.physics.add.staticGroup();
@@ -77,12 +79,13 @@ function create ()
     //  Here we create the ground.
     //  Scale it to fit the width of the game (the original sprite is 400x32 in size)
     //first paramètre = longueur // second == hauteur de la platforme
-    platforms.create(-50, 700, 'ground').setScale(2).refreshBody();   
+    platforms.create(100, 900, 'ground').setScale(2).refreshBody();   
 
-    //  Now let's create some ledges
+    //  plateform centrale
     platforms.create(900, 400, 'ground');
     platforms.create(50, 250, 'ground');
     platforms.create(750, 220, 'ground');
+    platforms.create(444, 555, 'ground');
 
     // The player and its settings
     player1 = this.physics.add.sprite(100, 600, 'dude');
@@ -123,28 +126,6 @@ function create ()
     player2.setBounce(0.1)
     player2.setCollideWorldBounds(false)
 
-    //  Our player animations, turning, walking left and walking right.
-    this.anims.create({
-        key: 'left',
-        frames: this.anims.generateFrameNumbers('dude', { start: 0, end: 3 }),
-        frameRate: 10,
-        repeat: -1
-    });
-
-    this.anims.create({
-        key: 'turn',
-        frames: [ { key: 'dude', frame: 4 } ],
-        frameRate: 20
-    });
-
-    this.anims.create({
-        key: 'right',
-        frames: this.anims.generateFrameNumbers('dude', { start: 5, end: 8 }),
-        frameRate: 10,
-        repeat: -1
-    });
-    // end player 2
-    
     //  Input Events
     cursors = this.input.keyboard.createCursorKeys();
     z = this.input.keyboard.addKey("z")
@@ -188,6 +169,8 @@ function create ()
     this.physics.add.collider(bombs, player2, explode);
     this.physics.add.collider(bombs, stars, explode);
 
+    //camera
+    //this.cameras.main.startFollow(player1)
 }
 
 function update ()
@@ -252,6 +235,10 @@ function update ()
         bomb.setCollideWorldBounds(false);
         bomb.setVelocity(-(player1.x - this.input.activePointer.downX)*1.5,-(player1.y - this.input.activePointer.downY)*1.5);
         bomb.allowGravity = false;
+    }
+    if(e.isDown){
+        console.log("x = "+player1.x)
+        console.log("y = " +player1.y)
     }
 }
 
