--- a/part10.html
+++ b/part10.html
@@ -45,6 +45,7 @@ var bombs;
 var platforms;
 var cursors;
 var camera1;
+var state = 5;
 ///
 //Paramètres physiques
 //Velocity des joueurs
@@ -67,6 +68,12 @@ function preload ()
     this.load.image('ground', 'assets/PNG/volcano_pack_alt_05.png');
     this.load.image('bomb', 'assets/bomb.png');
     this.load.spritesheet('dude', 'assets/dude.png', { frameWidth: 32, frameHeight: 48 });
+    this.load.spritesheet('sticky-run0', 'assets/sticky-run0.png', { frameWidth: 32, frameHeight: 48 });
+    this.load.spritesheet('sticky-run1', 'assets/sticky-run1.png', { frameWidth: 32, frameHeight: 48 });
+    this.load.spritesheet('sticky-run2', 'assets/sticky-run2.png', { frameWidth: 32, frameHeight: 48 });
+    this.load.spritesheet('sticky-run3', 'assets/sticky-run3.png', { frameWidth: 32, frameHeight: 48 });
+    this.load.spritesheet('sticky-run4', 'assets/sticky-run4.png', { frameWidth: 32, frameHeight: 48 });
+    this.load.spritesheet('sticky-run5', 'assets/sticky-run6.png', { frameWidth: 32, frameHeight: 48 });
 }
 
 function create ()
@@ -94,12 +101,13 @@ function create ()
     player1 = this.physics.add.sprite(100, 600, 'dude');
     player1.isDead = "false"
     player1.name = "player1"
+    player1.data = {"state": "5"};
 
     //  Player1 physics properties. Give the little guy a slight bounce.
     player1.setBounce(0.1);
     player1.setCollideWorldBounds(false);
 
-    //  Our player1 animations, turning, walking left and walking right.
+    // player2 animation
     this.anims.create({
         key: 'left',
         frames: this.anims.generateFrameNumbers('dude', { start: 0, end: 3 }),
@@ -120,6 +128,31 @@ function create ()
         repeat: -1
     });
 
+    // player1 animation
+    for (let i = 0; i < 6; i++) {
+            this.anims.create({
+            key: `left${i}`,
+            frames: this.anims.generateFrameNumbers(`sticky-run${i}`, { start: 0, end: 3 }),
+            frameRate: 10,
+            repeat: -1
+        });
+    }
+    for (let i = 0; i < 6; i++) {
+            this.anims.create({
+            key: `turn${i}`,
+            frames: [ { key: `sticky-run${i}`, frame: 4 } ],
+            frameRate: 20
+        });
+    }
+
+    for (let i = 0; i < 6; i++) {
+            this.anims.create({
+            key: `right${i}`,
+            frames: this.anims.generateFrameNumbers(`sticky-run${i}`, { start: 5, end: 8 }),
+            frameRate: 10,
+            repeat: -1
+        });
+    }
     //Created player 2
     player2 = this.physics.add.sprite(200, 600, 'dude');
     player2.isDead = "false"
@@ -174,17 +207,26 @@ function update ()
     if (cursors.left.isDown)
     {
         player1.setVelocityX(-veloX/malusX);
-        player1.anims.play('left', true);
+        for (let i = 0; i < 6; i++) {
+            if(state == i){
+            player1.anims.play(`left${i}`, true);}    
+        }
     }
     else if (cursors.right.isDown)
     {
         player1.setVelocityX(veloX/malusX);
-        player1.anims.play('right', true);
+        for (let i = 0; i < 6; i++) {
+            if(state == i){
+            player1.anims.play(`right${i}`, true);}    
+        }
     }
     else
     {
         player1.setVelocityX(0);
-        player1.anims.play('turn');
+        for (let i = 0; i < 6; i++) {
+            if(state == i){
+            player1.anims.play(`turn${i}`);}    
+        }
     }
     if (cursors.up.isDown && player1.body.touching.down)
     {
@@ -262,6 +304,7 @@ function explode (player, bomb){
         let yForce = bombForceY*((player.y - bomb.y))                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    
         victime.setAccelerationX(xForce)
         victime.setAccelerationY(yForce)
+        console.log(victime.name)
             //Créer un variation au cours du temps de l'acceleration
             setTimeout(() => {
                 victime.setAccelerationY(0)
