--- a/part10.html
+++ b/part10.html
@@ -152,13 +152,15 @@ function create ()
    create2(platforms,1,599,60,1638,'sollave')
    create2(platforms,1,599,60,1700,'solnoir')
    create2(platforms,1,99,60,1638,'sollave')
-   create2(platforms,9,99,60,1700,'solnoir')
-//BORDURE BAS GAUCHE + plateforme pour remonter
-   create2(platforms,17,-140,60,1212,'solnoir')
-   create(platforms,5,-140,60,2200,'solnoir')
-   create(platforms,1,-110,60,2100,'solnoir')
-   create(platforms,1,-110,60,1600,'solnoir')
-   create(platforms,1,70,60,1900,'solnoir')
+   create2(platforms,1,99,60,1700,'solnoir')
+//BORDURE BAS GAUCHE + plateforme pour remonter  
+   
+   create(platforms,1,-110,60,1350,'sollave')   
+   create(platforms,1,-50,60,1600,'sollave')
+   create(platforms,1,-180,60,1900,'sollave')
+   create(platforms,1,70,60,1900,'sollave')
+   create(platforms,1,-110,60,2100,'sollave')
+   
 
 //PLATEFORME BAS DROITE LAVE
 create(platforms,6,1600,60,1500,'sollave')
