--- a/gameV2.html
+++ b/gameV2.html
@@ -86,7 +86,7 @@
             this.load.image('potion', 'assets/potion.png');
             this.load.image('cross', 'assets/cross1.png');
             this.load.image('explosion','assets/explosion.png');
-            this.load.audio('bombSound','assets/Sound/bombSound.mp3');
+            this.load.audio('bombSound','assets/Sound/bombSound.wav');
         };
         //Element creating
         function create (){
